2009-01-23  Andreas Schwab  <schwab@suse.de>

	* gas/mips/mips16-e.d: Adjust for change in LOCAL_LABEL_PREFIX.
	* gas/mips/mipsel16-e.d: Likewise.
	* gas/mips/tmips16-e.d: Likewise.
	* gas/mips/tmipsel16-e.d: Likewise.

2009-01-19  Nick Clifton  <nickc@redhat.com>

	* lib/gas-defs.exp (run_list_test): Fix typo in comment.

2009-01-19  Nick Clifton  <nickc@redhat.com>

	* gas/arm/attr-syntax.d: Do not run for non-ELF based ARM
	targets.

2009-01-19  Andrew Stubbs  <ams@codesourcery.com>

	* gas/arm/attr-order.d: New file.
	* gas/arm/attr-order.s: New file.

2009-01-16  Andrew Stubbs  <ams@codesourcery.com>
	    Daniel Jacobowitz  <dan@codesourcery.com>

	* gas/arm/attr-syntax.d: New file.
	* gas/arm/attr-syntax.s: New file.

2009-01-15  Nick Clifton  <nickc@redhat.com>

	PR 9722
	* gas/testsuite/gas/arm/archv6m.d: Update expected NOP opcode.
	* gas/testsuite/gas/arm/pr9722.s: New test.
	* gas/testsuite/gas/arm/pr9722.d: Expected disassembly.

2009-01-14  Peter Bergner  <bergner@vnet.ibm.com>

	* gas/ppc/power6.s ("mtfsf", "mtfsf.", "mtfsfi", "mtfsfi."): Add tests.
	* gas/ppc/power6.d: Likewise.

2009-01-12  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/sse-noavx.s: Add tests for lfence, mfence and movnti.
	* gas/i386/x86-64-sse-noavx.s: Likewise.

	* gas/i386/sse-noavx.d: Updated.
	* gas/i386/x86-64-sse-noavx.d: Likewise.

2009-01-12  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/opts.s: Add tests for add, adc, and, cmp, or, sbb,
	sub and xor.
	* gas/i386/x86-64-opts.s: Likewise.

	* gas/i386/opts.d: Updated.
	* gas/i386/opts-intel.d: Likewise.
	* gas/i386/sse2avx-opts.d: Likewise.
	* gas/i386/sse2avx-opts-intel.d: Likewise.
	* gas/i386/x86-64-opts.d: Likewise.
	* gas/i386/x86-64-opts-intel.d: Likewise.
	* gas/i386/x86-64-sse2avx-opts.d: Likewise.
	* gas/i386/x86-64-sse2avx-opts-intel.d: Likewise.

2009-01-10  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/arch-10.s: Add clflush and syscall.
	* gas/i386/x86-64-arch-2.s: Likewise.

	* gas/i386/arch-10.d: Updated.